--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,3 +10,24 @@ ul.list > li {
     list-style-type: none;
     border-bottom: 1px solid grey;
 }
+
+li a:link {
+    color:green;
+}
+
+li a:visited{
+    color:red;
+}
+
+li a:hover{
+    color:pink;
+}
+
+a + ul li:first-child::first-letter {
+    font-weight: bold;
+    font-size: 120%;
+}
+
+[title="BCIT homepage"]  {
+    background-color: yellow;
+}
