--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,3 +31,25 @@ a + ul li:first-child::first-letter {
 [title="BCIT homepage"]  {
     background-color: yellow;
 }
+
+img {
+    float:left
+}
+
+.below{
+    clear:left
+}
+
+.target{
+    width:50px;
+    height:50px;
+    top: 0;
+    right: 0;
+    position: absolute;
+    background-color: forestgreen;
+    }
+    .container
+    {
+    border: 2px gray solid;
+    position:relative;
+    }
